# py2peer

./: CONTRIBUTING.md  README.md  setup.cfg
.github/workflows/: build-test.yml  publish-to-pypi.yml
src/py2peer/gnutella/: __init__.py  gnutella2.py
tests/: test_workflow.py
