[metadata]
name = py2peer
version = 0.0.1
author = William Gambardella
author_email = williamcampo@gmail.com
description = A collection of Python libraries for file-sharing across many networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gambardellawill/py2peer
project_urls =
    Bug Tracker = https://github.com/gambardellawill/py2peer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src